# VE482-FA22

./: .gitignore  README.md
Homeworks/h1/: README.md  hw1_ex4.sh
Homeworks/h2/: README.md  sketch.m
Homeworks/h3/: Makefile  README.md  dec_int.txt  ex2.c  inc_char.txt  list.c  list.h  rand_char.txt  sort  sort.c  sort.h
Homeworks/h4/: README.md  a.out  cthread.c  ex2.sh  ex2_norace.sh  number
Homeworks/h5/: README.md
Homeworks/h6/: README.md  thrashing  thrashing.c
Homeworks/h7/: README.md
Homeworks/h8/: README.md
Labs/Lab1/: README.md  guess.sh  ps3-value.sh
Labs/Lab10/: README.md  passwd
Labs/Lab11/: README.md
Labs/Lab2/: README.md  pipe.html  pipe.md  setup_minix.md
Labs/Lab3/: README.md
Labs/Lab4/: README.md  VE482 Lab4 22FA.md
Labs/Lab5/: Makefile  Makefile2  README.md  dec_char.txt  dec_int.txt  inc_int.txt  l5  l5.py  lab5_dlist.c  lab5_dlist.h  main  main.c
Labs/Lab6/: README.md  pre.md
Labs/Lab6/ex3/core/: plugin_manager.c  (+1 more)
Labs/Lab7/: README.md
Labs/Lab7/dadfs/: .base.o.d  base.c  compile_commands.json
Labs/Lab8/: README.md
Labs/Lab9/: README.md
Labs/Lab9/Dice/: dice.c  test.sh
p1/: Makefile  README.md  command.c  command.h  global.h  main.c  parse.c  parse.h
p2/: .drone.yml  .gitignore  INSTALL.md  README.md  test.sh
p2/src/: CMakeLists.txt  main.cpp  parsedArgs.h
p2/src/db/: Database.cpp  Database.h  Table.cpp  Table.h
p2/src/query/: Query.cpp  Query.h  QueryBuilders.cpp  QueryBuilders.h  QueryParser.cpp  QueryParser.h  QueryResult.h
p2/src/query/data/: InsertQuery.cpp  InsertQuery.h  SubQuery.cpp  SubQuery.h  UpdateQuery.cpp  UpdateQuery.h
p2/src/query/management/: CopyTableQuery.cpp  CopyTableQuery.h  CountQuery.cpp  CountQuery.h  DeleteQuery.cpp  DeleteQuery.h  DropTableQuery.cpp  DropTableQuery.h  DumpTableQuery.cpp  DumpTableQuery.h  DuplicateQuery.cpp  DuplicateQuery.h  ListTableQuery.cpp  ListTableQuery.h  LoadTableQuery.cpp  LoadTableQuery.h  MinMaxQuery.cpp  MinMaxQuery.h  PrintTableQuery.cpp  PrintTableQuery.h  QuitQuery.cpp  QuitQuery.h  SelectQuery.cpp  SelectQuery.h  SumQuery.cpp  SumQuery.h  SwapQuery.cpp  SwapQuery.h  TruncateTableQuery.cpp  TruncateTableQuery.h
